Improved shadow mapping

--- a/Epsilon Engine/Epsilon Engine.cbp
+++ b/Epsilon Engine/Epsilon Engine.cbp
@@ -148,6 +148,7 @@
 		<Unit filename="include/ProgramData.h" />
 		<Unit filename="include/ResourceManager.h" />
 		<Unit filename="include/Shader.h" />
+		<Unit filename="include/ShadowMapping.h" />
 		<Unit filename="include/Skybox.h" />
 		<Unit filename="include/SkyboxData.h" />
 		<Unit filename="include/Sun.h" />
@@ -168,6 +169,7 @@
 		<Unit filename="src/ProgramData.cpp" />
 		<Unit filename="src/ResourceManager.cpp" />
 		<Unit filename="src/Shader.cpp" />
+		<Unit filename="src/ShadowMapping.cpp" />
 		<Unit filename="src/Skybox.cpp" />
 		<Unit filename="src/Sun.cpp" />
 		<Unit filename="src/Terrain.cpp" />
@@ -184,7 +186,7 @@
 			<lib_finder disable_auto="1" />
 			<AutoVersioning>
 				<Scheme minor_max="10" build_max="0" rev_max="0" rev_rand_max="10" build_times_to_increment_minor="100" />
-				<Settings autoincrement="1" date_declarations="1" use_define="0" update_manifest="1" do_auto_increment="0" ask_to_increment="0" language="C++" svn="0" svn_directory="" header_path="version.h" />
+				<Settings autoincrement="1" date_declarations="1" use_define="0" update_manifest="1" do_auto_increment="1" ask_to_increment="0" language="C++" svn="0" svn_directory="D:\Epsilon Engine" header_path="version.h" />
 				<Changes_Log show_changes_editor="0" app_title="released version %M.%m.%b of %p" changeslog_path="ChangesLog.txt" />
 				<Code header_guard="VERSION_H" namespace="AutoVersion" prefix="" />
 			</AutoVersioning>
