Better resource managing, upgraded PBR, upgraded CBA

--- a/Epsilon Engine/Epsilon Engine.cbp
+++ b/Epsilon Engine/Epsilon Engine.cbp
@@ -54,7 +54,6 @@
 					<Add directory="deppend/glew/include" />
 					<Add directory="deppend/glfw/include" />
 					<Add directory="deppend/glm" />
-					<Add directory="deppend/assimp2/include" />
 					<Add directory="deppend" />
 					<Add directory="deppend/SOIL/src" />
 					<Add directory="deppend/FreeType2/include" />
@@ -66,7 +65,6 @@
 					<Add option="-lSOIL" />
 					<Add option="-lopengl32" />
 					<Add option="deppend\glfw\lib\glfw3dll.a" />
-					<Add option="deppend\assimp\lib\assimp_release-dll_win32\assimp.lib" />
 					<Add option="-lfreetype240" />
 					<Add option="-linih" />
 					<Add option="-lglew32.dll" />
@@ -82,57 +80,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="bin/Debug/shaders/ShadowMapping.fglsl" />
-		<Unit filename="bin/Debug/shaders/ShadowMapping.vglsl" />
-		<Unit filename="bin/Debug/shaders/StandardShading.fglsl" />
-		<Unit filename="bin/Debug/shaders/StandardShading.vglsl" />
-		<Unit filename="bin/Debug/shaders/StandardShadingRTT.fglsl" />
-		<Unit filename="bin/Debug/shaders/StandardShadingRTT.vglsl" />
-		<Unit filename="bin/Debug/shaders/TextVertexShader.fglsl" />
-		<Unit filename="bin/Debug/shaders/TextVertexShader.vglsl" />
-		<Unit filename="bin/Debug/shaders/TextureFragmentShader.fglsl" />
-		<Unit filename="bin/Debug/shaders/TransformVertexShader.vglsl" />
-		<Unit filename="bin/Debug/shaders/grass.fglsl" />
-		<Unit filename="bin/Debug/shaders/grass.vglsl" />
-		<Unit filename="bin/Debug/shaders/reflectionv.vglsl" />
-		<Unit filename="bin/Debug/shaders/skybox.fglsl" />
-		<Unit filename="bin/Debug/shaders/skybox.vglsl" />
-		<Unit filename="bin/Debug/shaders/testshader.fglsl" />
-		<Unit filename="bin/Debug/shaders/testshader.vglsl" />
-		<Unit filename="bin/Debug/shaders/text.fglsl" />
-		<Unit filename="bin/Debug/shaders/text.vglsl" />
-		<Unit filename="bin/Release/shaders/Geometry.fglsl" />
-		<Unit filename="bin/Release/shaders/Geometry.vglsl" />
-		<Unit filename="bin/Release/shaders/Lighting.fglsl" />
-		<Unit filename="bin/Release/shaders/Lighting.vglsl" />
-		<Unit filename="bin/Release/shaders/SSAO.fglsl" />
-		<Unit filename="bin/Release/shaders/SSAO.vglsl" />
-		<Unit filename="bin/Release/shaders/Sun.fglsl" />
-		<Unit filename="bin/Release/shaders/Sun.vglsl" />
-		<Unit filename="bin/Release/shaders/TextureFragmentShader.fglsl" />
-		<Unit filename="bin/Release/shaders/TransformVertexShader.vglsl" />
-		<Unit filename="bin/Release/shaders/blur.fglsl" />
-		<Unit filename="bin/Release/shaders/blurBloom.fglsl" />
-		<Unit filename="bin/Release/shaders/blurBloom.vglsl" />
-		<Unit filename="bin/Release/shaders/blurSSAO.fglsl" />
-		<Unit filename="bin/Release/shaders/blurSSAO.vglsl" />
-		<Unit filename="bin/Release/shaders/grass.fglsl" />
-		<Unit filename="bin/Release/shaders/grass.vglsl" />
-		<Unit filename="bin/Release/shaders/hdr.fglsl" />
-		<Unit filename="bin/Release/shaders/hdr.vglsl" />
-		<Unit filename="bin/Release/shaders/reflection.fglsl" />
-		<Unit filename="bin/Release/shaders/reflection.vglsl" />
-		<Unit filename="bin/Release/shaders/skybox.fglsl" />
-		<Unit filename="bin/Release/shaders/skybox.vglsl" />
-		<Unit filename="bin/Release/shaders/testshader.fglsl" />
-		<Unit filename="bin/Release/shaders/testshader.vglsl" />
-		<Unit filename="bin/Release/shaders/text.fglsl" />
-		<Unit filename="bin/Release/shaders/text.vglsl" />
-		<Unit filename="bin/Release/shaders/water.fglsl" />
-		<Unit filename="bin/Release/shaders/water.vglsl" />
 		<Unit filename="include/BSP.h" />
 		<Unit filename="include/BSPFace.h" />
-		<Unit filename="include/BSPfile.h" />
 		<Unit filename="include/BSPformat.h" />
 		<Unit filename="include/CBitset.h" />
 		<Unit filename="include/CPUID.h" />
@@ -151,6 +100,7 @@
 		<Unit filename="include/PostProcess.h" />
 		<Unit filename="include/ProgramData.h" />
 		<Unit filename="include/ResourceManager.h" />
+		<Unit filename="include/Scene.h" />
 		<Unit filename="include/Shader.h" />
 		<Unit filename="include/ShadowMapping.h" />
 		<Unit filename="include/Skybox.h" />
@@ -162,6 +112,7 @@
 		<Unit filename="include/Types.h" />
 		<Unit filename="include/Water.h" />
 		<Unit filename="include/camera.h" />
+		<Unit filename="include/emlFormat.h" />
 		<Unit filename="include/main.h" />
 		<Unit filename="src/BSP.cpp" />
 		<Unit filename="src/Camera.cpp" />
@@ -170,9 +121,12 @@
 		<Unit filename="src/Frustum.cpp" />
 		<Unit filename="src/MD5_Anim.cpp" />
 		<Unit filename="src/MD5_Model.cpp" />
+		<Unit filename="src/Mesh.cpp" />
+		<Unit filename="src/Model.cpp" />
 		<Unit filename="src/PostProcess.cpp" />
 		<Unit filename="src/ProgramData.cpp" />
 		<Unit filename="src/ResourceManager.cpp" />
+		<Unit filename="src/Scene.cpp" />
 		<Unit filename="src/Shader.cpp" />
 		<Unit filename="src/ShadowMapping.cpp" />
 		<Unit filename="src/Skybox.cpp" />
