--- a/Epsilon Engine/Epsilon Engine.cbp
+++ b/Epsilon Engine/Epsilon Engine.cbp
@@ -63,7 +63,7 @@
 					<Add directory="deppend/FreeType2/include" />
 					<Add directory="deppend/ini/include" />
 					<Add directory="include" />
-					<Add directory="deppend/bullet3-2.83.7/src" />
+					<Add directory="deppend/bullet-2.82-r2704/src" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -74,9 +74,10 @@
 					<Add option="-linih" />
 					<Add option="-lglew32.dll" />
 					<Add option="-lgdi32" />
-					<Add library="deppend\bullet3-2.83.7\lib\libBulletDynamics.a" />
-					<Add library="deppend\bullet3-2.83.7\lib\libBulletCollision.a" />
-					<Add library="deppend\bullet3-2.83.7\lib\libLinearMath.a" />
+					<Add library="deppend\bullet-2.82-r2704\build\vs2010\libBulletDynamics.a" />
+					<Add library="deppend\bullet-2.82-r2704\build\vs2010\libBulletCollision.a" />
+					<Add library="deppend\bullet-2.82-r2704\build\vs2010\libLinearMath.a" />
+					<Add library="deppend\bullet-2.82-r2704\build\vs2010\libBulletSoftBody.a" />
 					<Add directory="deppend/glew/lib" />
 					<Add directory="deppend/glfw/lib" />
 					<Add directory="deppend/SOIL/lib" />
@@ -91,9 +92,9 @@
 		</Compiler>
 		<Unit filename="include/BSP.h" />
 		<Unit filename="include/BSPFace.h" />
+		<Unit filename="include/BSPfile.h" />
 		<Unit filename="include/BSPformat.h" />
 		<Unit filename="include/CBitset.h" />
-		<Unit filename="include/CPUID.h" />
 		<Unit filename="include/Component.h" />
 		<Unit filename="include/CubeMap.h" />
 		<Unit filename="include/EntityTemplate.h" />
@@ -102,14 +103,11 @@
 		<Unit filename="include/Frustum.h" />
 		<Unit filename="include/Grass.h" />
 		<Unit filename="include/Includes.h" />
-		<Unit filename="include/KeyBoard.h" />
-		<Unit filename="include/KeyboardWrapper.h" />
 		<Unit filename="include/Light.h" />
 		<Unit filename="include/MD5_Anim.h" />
 		<Unit filename="include/MD5_Model.h" />
 		<Unit filename="include/Mesh.h" />
 		<Unit filename="include/Model.h" />
-		<Unit filename="include/Mouse.h" />
 		<Unit filename="include/Physics.h" />
 		<Unit filename="include/Player.h" />
 		<Unit filename="include/PostProcess.h" />
@@ -129,13 +127,17 @@
 		<Unit filename="include/camera.h" />
 		<Unit filename="include/emlFormat.h" />
 		<Unit filename="include/main.h" />
+		<Unit filename="include/sys/CPUID.h" />
+		<Unit filename="include/sys/Joystick.h" />
+		<Unit filename="include/sys/KeyBoard.h" />
+		<Unit filename="include/sys/KeyboardWrapper.h" />
+		<Unit filename="include/sys/Mouse.h" />
 		<Unit filename="src/BSP.cpp" />
 		<Unit filename="src/BSPFace.cpp" />
 		<Unit filename="src/Camera.cpp" />
 		<Unit filename="src/EntityTemplate.cpp" />
 		<Unit filename="src/Epsilon.cpp" />
 		<Unit filename="src/Frustum.cpp" />
-		<Unit filename="src/KeyBoard.cpp" />
 		<Unit filename="src/MD5_Anim.cpp" />
 		<Unit filename="src/MD5_Model.cpp" />
 		<Unit filename="src/Mesh.cpp" />
@@ -156,6 +158,7 @@
 		<Unit filename="src/resources.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
+		<Unit filename="src/sys/KeyBoard.cpp" />
 		<Unit filename="version.h" />
 		<Extensions>
 			<code_completion />
