--- a/Epsilon Engine/Epsilon Engine.cbp
+++ b/Epsilon Engine/Epsilon Engine.cbp
@@ -111,6 +111,8 @@
 		<Unit filename="include/Epsilon.h" />
 		<Unit filename="include/EpsilonMemory.h" />
 		<Unit filename="include/Frustum.h" />
+		<Unit filename="include/GUI/Button.h" />
+		<Unit filename="include/GUI/Container.h" />
 		<Unit filename="include/GUI/GUI.h" />
 		<Unit filename="include/GUI/Panel.h" />
 		<Unit filename="include/GUI/Widget.h" />
@@ -125,11 +127,13 @@
 		<Unit filename="include/Model.h" />
 		<Unit filename="include/OpenGL/FrameBuffer.h" />
 		<Unit filename="include/OpenGL/HelperFunctions/FullScreenQuad.h" />
+		<Unit filename="include/OpenGL/HelperFunctions/Quad.h" />
 		<Unit filename="include/OpenGL/RenderTarget.h" />
 		<Unit filename="include/OpenGL/VertexArrayObject.h" />
 		<Unit filename="include/OpenGL/VertexBufferObject.h" />
 		<Unit filename="include/Particle.h" />
 		<Unit filename="include/ParticleProxy.h" />
+		<Unit filename="include/ParticleRenderer.h" />
 		<Unit filename="include/ParticleSystem.h" />
 		<Unit filename="include/Physics.h" />
 		<Unit filename="include/Picking.h" />
@@ -137,6 +141,7 @@
 		<Unit filename="include/PostProcess.h" />
 		<Unit filename="include/PostProcess/Effect.h" />
 		<Unit filename="include/PostProcess/MotionBlur.h" />
+		<Unit filename="include/PostProcess/SSAO.h" />
 		<Unit filename="include/ProgramData.h" />
 		<Unit filename="include/ResourceManager.h" />
 		<Unit filename="include/Scene.h" />
@@ -169,6 +174,7 @@
 		<Unit filename="include/sys/KeyBoard.h" />
 		<Unit filename="include/sys/KeyboardWrapper.h" />
 		<Unit filename="include/sys/Mouse.h" />
+		<Unit filename="include/sys/filesystem.h" />
 		<Unit filename="src/BSP.cpp" />
 		<Unit filename="src/BSPFace.cpp" />
 		<Unit filename="src/Camera.cpp" />
@@ -186,6 +192,7 @@
 		<Unit filename="src/Player.cpp" />
 		<Unit filename="src/PostProcess.cpp" />
 		<Unit filename="src/PostProcess/MotionBlur.cpp" />
+		<Unit filename="src/PostProcess/SSAO.cpp" />
 		<Unit filename="src/ProgramData.cpp" />
 		<Unit filename="src/ResourceManager.cpp" />
 		<Unit filename="src/Scene.cpp" />
@@ -201,6 +208,7 @@
 			<Option compilerVar="WINDRES" />
 		</Unit>
 		<Unit filename="src/sys/KeyBoard.cpp" />
+		<Unit filename="src/sys/filesystem.cpp" />
 		<Unit filename="version.h" />
 		<Extensions>
 			<code_completion />
