--- a/Epsilon Engine/Epsilon Engine.cbp
+++ b/Epsilon Engine/Epsilon Engine.cbp
@@ -57,9 +57,9 @@
 				<Compiler>
 					<Add option="-march=core2" />
 					<Add option="-O3" />
-					<Add option="-std=c++14" />
 					<Add option="-std=c++11" />
 					<Add option="-fopenmp" />
+					<Add option="-std=c++14" />
 					<Add directory="deppend/glew-2.0.0/include" />
 					<Add directory="deppend/glfw-3.2.bin.WIN32/include" />
 					<Add directory="deppend/glm" />
@@ -81,6 +81,7 @@
 					<Add option="deppend\glew-2.0.0\lib\libglew32.dll.a" />
 					<Add option="-lgdi32" />
 					<Add option="deppend\openal-soft-1.17.2-bin\libs\Win32\libOpenAL32.dll.a" />
+					<Add option="-fopenmp" />
 					<Add option="-lgomp" />
 					<Add library="deppend/bullet-2.82-r2704/lib/libBulletDynamics.a" />
 					<Add library="deppend/bullet-2.82-r2704/lib/libBulletCollision.a" />
