--- a/Epsilon Engine/Epsilon Engine.cbp
+++ b/Epsilon Engine/Epsilon Engine.cbp
@@ -119,6 +119,7 @@
 		<Unit filename="include/EpsilonMemory.h" />
 		<Unit filename="include/Frustum.h" />
 		<Unit filename="include/GUI/Button.h" />
+		<Unit filename="include/GUI/CheckBox.h" />
 		<Unit filename="include/GUI/Container.h" />
 		<Unit filename="include/GUI/GUI.h" />
 		<Unit filename="include/GUI/Label.h" />
