--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,6 @@
+before_install:
+  - sudo apt-get install libglfw3-dev
+  - sudo apt-get install libglew-dev
+  - sudo apt-get install libSOIL-dev
+
 language: cpp
