--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 before_install:
+  - sudo add-apt-repository http://ppa.launchpad.net/keithw/glfw3/ubuntu trusty main -y
   - sudo apt-get install cmake xorg-dev libglu1-mesa-dev
   - sudo apt-get install libglfw3-dev libglfw3
   - sudo apt-get install libglew-dev
