--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: xenial
+
 before_install:
   - sudo add-apt-repository http://ppa.launchpad.net/keithw/glfw3/ubuntu -y
   - sudo apt-get install cmake xorg-dev libglu1-mesa-dev
